--- a/monty.ipynb
+++ b/monty.ipynb
@@ -88,7 +88,7 @@
     "            break\n",
     "    \n",
     "    # Change the guess to the other door\n",
-    "    for newGuess in range(3):\n",
+    "    for newGuess in range(len(door)):\n",
     "        if newGuess != guess and newGuess != openDoor:\n",
     "            guess = newGuess\n",
     "            break\n",
